--- a/preamble.tex
+++ b/preamble.tex
@@ -173,6 +173,10 @@
 \newcommand*{\defxfers}{\seq{\defxfer}}
 \newcommand*{\beefycommitmap}{\mathbf{C}}
 
+\newcommand*{\gascounter}{\varrho}
+\newcommand*{\registers}{\omega}
+\newcommand*{\memory}{\mu}
+
 \newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!}
 \newcommand*{\jamdraftversionstring}{\jamdraftversion}
 
