--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -55,8 +55,8 @@
   \item[$\mathbb{P}$] The set of work-packages. See equation \ref{eq:workpackage}.
   \item[$\mathbb{S}$] The set of availability specifications.
   \item[$\mathbb{T}$] The set of deferred transfers.
-  \item[$\mathbb{U}$] The set of partial state, used during accumulation. See equation \ref{eq:partialstate}.  \item[$\mathbb{V}_{\mu}$] The set of validly readable indices for \textsc{pvm} \textsc{ram} $\mu$. See appendix \ref{sec:virtualmachine}.
-  \item[$\mathbb{V}^*_{\mu}$] The set of validly writable indices for \textsc{pvm} \textsc{ram} $\mu$. See appendix \ref{sec:virtualmachine}.
+  \item[$\mathbb{U}$] The set of partial state, used during accumulation. See equation \ref{eq:partialstate}.  \item[$\mathbb{V}_{\memory}$] The set of validly readable indices for \textsc{pvm} \textsc{ram} $\memory$. See appendix \ref{sec:virtualmachine}.
+  \item[$\mathbb{V}^*_{\memory}$] The set of validly writable indices for \textsc{pvm} \textsc{ram} $\memory$. See appendix \ref{sec:virtualmachine}.
   \item[$\mathbb{W}$] The set of work-reports.
   \item[$\mathbb{X}$] The set of refinement contexts.
   \item[$\Y$] The set of octet strings/``blobs''. Subscript denotes length. See section \ref{sec:sequences}.
@@ -76,7 +76,7 @@
     \item[$\Delta_*$] The parallel accumulation function.
     \item[$\Delta_+$] The full sequential accumulation function.
   \end{description}
-%  \item[$\Theta$] Unused. %	Θ
+%  \item[$\gascounter$] Unused. %	Θ
 %  \item[$\Pi$] Unused. %	Π
   \item[$\Lambda$] The historical lookup function. See equation \ref{eq:historicallookup}. % Λ
   \item[$\Xi$] The work result computation function. See equation \ref{eq:workresultfunction}. %	Ξ
@@ -234,16 +234,16 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\vartheta$] The accumulation queue. % ϑ
   \item[$\xi$] The accumulation history. % ξ
 \end{description}
-% ω
+% θ
 
 \subsubsection{Virtual Machine components}
 
 \begin{description}
   \item[$\varepsilon$] The exit-reason resulting from all machine state transitions. %	ε
   \item[$\nu$] The immediate values of an instruction. %	ν
-  \item[$\mu$] The memory sequence; a member of the set $\mathbb{M}$. %	μ
-  \item[$\theta$] The gas counter. % θ
-  \item[$\varrho$] The registers. %	ϱ
+  \item[$\memory$] The memory sequence; a member of the set $\mathbb{M}$. %	μ
+  \item[$\gascounter$] The gas counter. % ϱ
+  \item[$\registers$] The registers. % ω
   \item[$\zeta$] The instruction sequence. %	ζ
   \item[$\varpi$] The sequence of basic blocks of the program. % ϖ
   \item[$\imath$] The instruction counter. % ı
