--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -526,9 +526,9 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
     \end{cases} \\
     (\omega'_0, \mathbf{x}'_\mathbf{s}, \mathbf{x}'_\mathbf{t}) &\equiv \begin{cases}
       (\mathtt{OK}, \none, \mathbf{x}_\mathbf{t}),\ \textbf{virtual machine halts} &\when \mathbf{t} = \none \\
-      (\mathtt{OOB}, \mathbf{x}_\mathbf{t}, (\mathbf{x}_\mathbf{s})_b) &\otherwhen t = \error \\
-      (\mathtt{WHO}, \mathbf{x}_\mathbf{t}, (\mathbf{x}_\mathbf{s})_b) &\otherwhen d \not \in \keys{\delta \cup \mathbf{x}_\mathbf{n}} \\
-      (\mathtt{LOW}, \mathbf{x}_\mathbf{t}, (\mathbf{x}_\mathbf{s})_b) &\otherwhen g < (\delta \cup \mathbf{x}_\mathbf{n})[d]_m \\
+      (\mathtt{OOB}, \mathbf{x}_\mathbf{s}, \mathbf{x}_\mathbf{t}) &\otherwhen t = \error \\
+      (\mathtt{WHO}, \mathbf{x}_\mathbf{s}, \mathbf{x}_\mathbf{t}) &\otherwhen d \not \in \keys{\delta \cup \mathbf{x}_\mathbf{n}} \\
+      (\mathtt{LOW}, \mathbf{x}_\mathbf{s}, \mathbf{x}_\mathbf{t}) &\otherwhen g < (\delta \cup \mathbf{x}_\mathbf{n})[d]_m \\
       (\mathtt{OK}, \none, \mathbf{x}_\mathbf{t} \doubleplus \mathbf{t}),\ \textbf{virtual machine halts} &\otherwise
     \end{cases} \\
   \end{aligned}$\\
